funnel: Implement pad allocation

Patch by Yongnian Le <yongnian.le@intel.com>

https://bugs.freedesktop.org/show_bug.cgi?id=32208